--- a/.github/workflows/go-cross.yml
+++ b/.github/workflows/go-cross.yml
@@ -11,8 +11,8 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [ 1.15, 1.x ]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        go-version: [ 1.16, 1.x ]
+        os: [ubuntu-latest]
 
     steps:
       # https://github.com/marketplace/actions/setup-go-environment
